# anvil

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_AUDIT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FINAL_SESSION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  SECURITY_GUIDE.md  SESSION_ADVANCED_FEATURES.md  SESSION_SUMMARY.md  docker-compose.yml  install.sh  ruff.toml
agent-constitution/: README.md  pyproject.toml
agent-curriculum/: README.md  pyproject.toml
agent-fuzzer/: README.md  pyproject.toml
agent-fuzzer/.github/workflows/: release.yml
agent-fuzzer/src/agent_fuzzer/: __init__.py  cli.py  generator.py  reporter.py  runner.py
agent-profiler/: README.md  pyproject.toml
agent-runtime/: README.md  pyproject.toml
agent-skills/: README.md  pyproject.toml
agent-skills/.github/workflows/: release.yml
agent-skills/src/agent_skills/: __init__.py  cli.py  decomposition.py  lora_builder.py  registry.py
agent-swarm/: README.md  pyproject.toml
agent-telemetry/: README.md  pyproject.toml
agent-telemetry/.github/workflows/: release.yml
agent-telemetry/src/agent_telemetry/: cli.py  collector.py  dashboard.py  storage.py  token_tracker.py
agent-telemetry/tests/: test_token_tracker.py
anvil/: Dockerfile  anvil.db  docker-compose.yml  pyproject.toml  solution.py
anvil-sdk/: README.md  pyproject.toml
anvil-sdk/examples/: basic_usage.py  custom_agent.py  event_handling.py
anvil-sdk/src/anvil_sdk/: __init__.py  agents.py  client.py  events.py  tasks.py  types.py
anvil-vscode-extension/: README.md  package.json  tsconfig.json
anvil/.anvil/snapshots/snap-1781461959/src/anvil/: __init__.py  cli.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/agents/: __init__.py  agent_manager.py  builtin_agents.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/compaction/: __init__.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/core/: __init__.py  config.py  config_v2.py  engine.py  rules.py  snapshot.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/integrations/: cost_optimizer.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/mcp/: __init__.py  mcp_manager.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/models/: __init__.py  openai_model.py  registry.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/permissions/: __init__.py  permissions.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/rules/: rules_manager.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/tools/: new_tools.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/tui/: __init__.py
anvil/.anvil/snapshots/snap-1781461959/tests/: test_agents.py  test_anvil.py  test_daemon.py  test_engine.py  test_permissions.py
anvil/.github/workflows/: release.yml
anvil/examples/: mcp_servers.json
anvil/src/anvil/: __init__.py  cli.py  sdk.py
anvil/src/anvil/agents/: __init__.py  agent_base.py  agent_generator.py  agent_manager.py  auto_creator.py  builtin_agents.py  context_analyzer.py  fable5_integrator.py  pattern_extractor.py  skill_generator.py
anvil/src/anvil/api/: __init__.py  auth.py  database.py  multi_edit.py  server.py  websocket.py
anvil/src/anvil/browser/: __init__.py  automator.py
anvil/src/anvil/codebase/: docs_rag.py  indexer.py
anvil/src/anvil/commands/: __init__.py  command_manager.py
anvil/src/anvil/compaction/: compactor.py
anvil/src/anvil/config_v2/: config_v2.py
anvil/src/anvil/core/: checkpoint.py  commands.py  compaction.py  config.py  engine.py  init_project.py  instructions.py  plan_act.py  session.py  subagents.py
anvil/src/anvil/daemon/: __init__.py  server.py
anvil/src/anvil/debugging/: __init__.py  debugger.py
anvil/src/anvil/extensions/: __init__.py  manager.py
anvil/src/anvil/i18n/: __init__.py  translator.py
anvil/src/anvil/image/: analyzer.py
anvil/src/anvil/integrations/: __init__.py  agent_swarm.py  discord.py  error_recovery.py  github_actions.py  notifications.py  scheduler.py  slack.py  verifyloop.py
anvil/src/anvil/lsp/: __init__.py  client.py
anvil/src/anvil/mcp/: __init__.py  client.py  mcp_types.py  protocol.py  registry.py  server.py  tools.py
anvil/src/anvil/memory/: __init__.py  manager.py
anvil/src/anvil/models/: __init__.py  anthropic_model.py  local.py  registry.py
anvil/src/anvil/monitoring/: __init__.py  metrics.py
anvil/src/anvil/onboarding/: __init__.py  manager.py
anvil/src/anvil/permissions/: permissions.py
anvil/src/anvil/printing_press/: __init__.py  generator.py
anvil/src/anvil/remote/: __init__.py  control.py
anvil/src/anvil/skills/: __init__.py  registry.py
anvil/src/anvil/snapshot/: snapshot_manager.py
anvil/src/anvil/terminal/: __init__.py  autocomplete.py
anvil/src/anvil/tools/: __init__.py  executor.py  new_tools.py
anvil/src/anvil/tui/: __init__.py  app.py  dashboard.py
anvil/src/anvil/verify/: __init__.py  pipeline.py
anvil/src/anvil/voice/: __init__.py  recognizer.py
anvil/src/anvil/web/: server.py
anvil/src/anvil/web/static/: app.js  index.html  styles.css
anvil/tests/: E2E_README.md  conftest_playwright.py  debug_model_output.py  test_advanced_api.py  test_agents.py  test_all_models.py  test_anvil.py  test_api.py  test_browser.py  test_codebase.py  test_commands.py  test_compaction.py  test_config_v2.py  test_daemon.py  test_docs_rag.py  test_e2e.py  test_e2e_pipeline.py  test_engine.py  test_extensions.py  test_i18n.py  test_image.py  test_integration.py  test_mcp.py  test_mcp_server.py  test_memory.py  test_models.py  test_new_tools.py  test_onboarding.py  test_parser.py  test_performance.py  test_permissions.py  test_printing_press.py  test_rules.py  test_session_sharing.py  test_skill_registry.py  test_snapshot.py  test_subagent_e2e.py  test_task_skill.py  test_terminal.py  test_tools.py  (+4 more)
bench-agent/: pyproject.toml
blog/: 01_announcing_fableforge.md
cost-optimizer/: pyproject.toml
docs/: EXTENSIONS.md  README.md  (+6 more)
fableforge-cli/: README.md  pyproject.toml
fableforge-cli/.github/workflows/: release.yml
fableforge-cli/src/fableforge_cli/: __init__.py  main.py
fableforge-cli/tests/: test_cli.py
(+180 files in other folders)
