[project]
name = "anvil-sdk"
version = "0.3.0"
description = "SDK for embedding Anvil AI agent in your applications"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anvil_sdk"]
