[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fableforge-anvil-agent"
version = "0.3.0"
description = "The open-source, self-verified coding agent. Generate → Execute → Verify → Recover."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "FableForge", email = "team@fableforge.ai"}]
keywords = ["agent", "coding", "verification", "self-healing", "llm", "open-source"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "rich>=13.7.0",
    "click>=8.1.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "pathspec>=0.11",
    "tree-sitter>=0.21.0",
    "prompt-toolkit>=3.0.47",
    "jsonschema>=4.22.0",
    "python-slugify>=8.0.4",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
local = ["llama-cpp-python>=0.2", "onnxruntime>=1.16"]
api = [
    "openai>=1.0",
    "anthropic>=0.18",
    "google-generativeai>=0.3.0",
    "boto3>=1.34.0",
    "azure-ai-ml>=1.13.0",
    "google-cloud-aiplatform>=1.38.0",
]
mcp = ["mcp>=1.0.0"]
codebase = ["sentence-transformers>=2.2.0", "faiss-cpu>=1.7.4"]
lsp = ["pylsp>=1.10.0"]
integrations = ["slack-sdk>=3.27.0", "discord.py>=2.3.0"]
tui = ["textual>=0.47", "textual-dev>=0.4"]
web = ["fastapi>=0.111", "uvicorn>=0.30"]
all = ["fableforge-anvil-agent[local,api,mcp,codebase,lsp,integrations,tui,web]"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0", "ruff>=0.1"]

[project.scripts]
anvil = "anvil.cli:main"

[project.entry-points."anvil.models"]
local = "anvil.models.local:LocalModel"
openai = "anvil.models.openai_model:OpenAIModel"
anthropic = "anvil.models.anthropic_model:AnthropicModel"
gemini = "anvil.models.registry:GeminiModel"
bedrock = "anvil.models.registry:BedrockModel"
azure = "anvil.models.registry:AzureOpenAIModel"
deepseek = "anvil.models.registry:DeepSeekModel"
groq = "anvil.models.registry:GroqModel"
mistral = "anvil.models.registry:MistralModel"
cerebras = "anvil.models.registry:CerebrasModel"
openrouter = "anvil.models.registry:OpenRouterModel"
copilot = "anvil.models.registry:CopilotModel"
vertex = "anvil.models.registry:VertexAIModel"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I", "N", "W", "UP"]