[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fableforge-cli"
version = "0.2.0"
description = "Umbrella CLI for the FableForge agent ecosystem"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "FableForge Team"},
]
keywords = ["ai", "agent", "cli", "fableforge", "anvil"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "click>=8.0",
  "rich>=13.0",
  "httpx>=0.25",
  "fableforge-anvil-agent>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
fableforge = "fableforge_cli.main:cli"
ff = "fableforge_cli.main:cli"

[project.urls]
Homepage = "https://github.com/KingLabsA/anvil/tree/main/fableforge-cli"
Repository = "https://github.com/KingLabsA/anvil"
Documentation = "https://kinglabsa.github.io/fableforge/"

[tool.hatch.build.targets.wheel]
packages = ["src/fableforge_cli"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
